Draw wave lines' line around the coastline as drawn, and jitter it by offsets
With jagged coastlines, wave lines' line touched sharp teeth of the coast. The
path it was drawn around straightened short jagged edges and was smoothed
with CurveCreator.createCurve, which also drops points from segments a few
pixels long, so the path cut across teeth that the line is close enough to
reach. And jitter moved each point perpendicular to the path, which keeps the
line near the path but can leave a sharp tooth several times the jitter
amount away from the line, and makes a jagged line loop.

The line now follows every point of the coastline as drawn, with no
straightening or smoothing, and jitter moves each point by a smooth offset
that depends only on its position. The line and the coastline then stay
within the jitter amount of each other in both directions, so the jitter cap
keeps the line off the coast. Concentric lines keep their smoothed path and
perpendicular jitter.

Claude-Session: https://claude.ai/code/session_01KuWjmZN9mSjbgUpcmtiLGL